turned implementation into something more JIT-friendly; note: may break some existing code